[MRGA-12] чаты + бд
